--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,12 @@
   color: #61dafb;
 }
 
+.section-border{
+  padding: 15px;
+  margin: 15px;
+  border:2px solid blue;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
